--- a/site3/upf4_helm/values.yaml
+++ b/site3/upf4_helm/values.yaml
@@ -1,40 +1,135 @@
-enable: true
-resources:
-  enabled: false
+# Copyright 2020-present Open Networking Foundation
+#
+# SPDX-License-Identifier: Apache-2.0
 images:
-  repository: "registry.opennetworking.org/docker.io/"
-config:
+  tags:
+    bess: "omecproject/upf-epc-bess:master-5786085"
+    pfcpiface: "omecproject/upf-epc-pfcpiface:master-5786085"
+    tools: registry.aetherproject.org/tools/busybox:stable
+  pullPolicy: IfNotPresent
+  # Secrets must be manually created in the namespace.
+  pullSecrets:
+    - name: aether.registry
+nodeSelectors:
+  enabled: false
   upf:
-    name: "oaisim"
-    sriov:
-      enabled: false #default sriov is disabled in AIAB setup
+    label: node-role.aetherproject.org
+    value: omec-upf
+resources:
+  enabled: true
+  bess:
+    requests:
+      cpu: 2
+      memory: 1Gi
+    limits:
+      cpu: 2
+      memory: 1Gi
+  routectl:
+    requests:
+      cpu: 256m
+      memory: 128Mi
+    limits:
+      cpu: 256m
+      memory: 128Mi
+  web:
+    requests:
+      cpu: 256m
+      memory: 128Mi
+    limits:
+      cpu: 256m
+      memory: 128Mi
+  cpiface:
+    requests:
+      cpu: 256m
+      memory: 128Mi
+    limits:
+      cpu: 256m
+      memory: 128Mi
+config:
+  coreDump:
+    enabled: false
+    path: /tmp/coredump
+  gratuitousArp:
+    enabled: true
+    interval: 10 # seconds
+  upf:
+    # Enable privileged when run from VM with sriov support
+    privileged: false
+    prometheus:
+      port: 8080
+      # Provide nodePort when serviceType is NodePort
+      #nodePort: 30088
     hugepage:
-      enabled: false #should be enabled if dpdk is enabled
-    cniPlugin: macvlan
+      enabled: true
+    sriov:
+      enabled: true
+    # Dynamic IP allocation is not supported yet
     ipam: static
+    # Custom routes inside UPF
+    #routes:
+    #  - to: 10.76.28.173/32
+    #    via: 169.254.1.1
+    cniPlugin: vfioveth
     enb:
-      subnet: "192.168.120.0/24" #this is your gNB network
+      subnet: 192.168.251.0/24
     access:
-      iface: "ens4"
-      ip: "192.168.7.10/24" #New IP address for UPF3 access interface
-      gateway: "192.168.7.1"
+      # Provide sriov resource name when sriov is enabled
+      resourceName: "intel.com/intel_sriov_vfio"
+      gateway: 192.168.252.1
+      ip: 192.168.252.3/24
+      #mac:
+      #vlan:
+      #iface:
     core:
-      iface: "ens4"
-      ip: "192.168.8.10/24" #New IP address for UPF3 core interface
-      gateway: "192.168.8.1" 
+      # Provide sriov resource name when sriov is enabled
+      resourceName: "intel.com/intel_sriov_vfio"
+      gateway: 192.168.250.1
+      ip: 192.168.250.3/24
+      #mac:
+      #vlan:
+      #iface:
     cfgFiles:
       upf.json:
-        mode: af_packet  #this mode means no dpdk
-        hwcksum: true
-        log_level: "trace"
-        gtppsc: false #extension header is enabled in 5G. Sending QFI in pdu session extension header
-        measure_upf: false #enable packet processing time
+        mode: dpdk
+        workers: 1
+        max_sessions: 50000
+        table_sizes:
+          pdrLookup: 50000
+          appQERLookup: 200000
+          sessionQERLookup: 100000
+          farLookup: 150000
+        access:
+          ifname: access
+        core:
+          ifname: core
+        measure_upf: true
+        measure_flow: false
+        enable_notify_bess: true
+        notify_sockaddr: "/pod-share/notifycp"
         cpiface:
-          dnn: "internet" #keep it matching with Slice dnn
+          dnn: "internet"
           hostname: "upf"
-          #http_port: "8080"
-          enable_ue_ip_alloc: false # if true then it means UPF allocates address from below pool
-          ue_ip_pool: "172.250.0.0/16" # UE ip pool is used if enable_ue_ip_alloc is set to true
-
+          http_port: "8080"
+        # Default global rate limits. Can be changed at runtime via BESS gRPC.
+        slice_rate_limit_config:
+          # Uplink
+          n6_bps: 1000000000 # 1Gbps
+          n6_burst_bytes: 12500000 # 10ms * 1Gbps
+          # Downlink
+          n3_bps: 1000000000 # 1Gbps
+          n3_burst_bytes: 12500000 # 10ms * 1Gbps
+        qci_qos_config:
+          - qci: 0 # Fallback QCI
+            cbs: 50000
+            ebs: 50000
+            pbs: 50000
+            burst_duration_ms: 10
+            priority: 7
 service:
-  externalIp: "10.10.1.4" 
+  type: ClusterIP
+  #externalIp:
+  #annotations:
+servicemonitor:
+  enabled: false
+podsecuritypolicy:
+  enabled: false
