--- a/site3/router/router.yaml
+++ b/site3/router/router.yaml
@@ -10,7 +10,7 @@ metadata:
 spec:
   config: '{
     "cniVersion": "0.3.1",
-    "type": "ipvlan",
+    "type": "macvlan",
     "master": "ens4",
     "ipam": {
         "type": "static"
