--- a/site1/upf1_2_helm/values_upf1.yaml
+++ b/site1/upf1_2_helm/values_upf1.yaml
@@ -1,6 +1,5 @@
 enable: true
-resources:
-  enabled: false
+resources: enabled: false
 images:
   repository: "registry.opennetworking.org/docker.io/"
 config:
@@ -32,14 +31,11 @@ config:
         cpiface:
           dnn: "internet" #keep it matching with Slice dnn
           hostname: "upf"
-          #http_port: "8080"
+          http_port: "7000"
           enable_ue_ip_alloc: false # if true then it means UPF allocates address from below pool
           ue_ip_pool: "172.250.0.0/16" # UE ip pool is used if enable_ue_ip_alloc is set to true
 service:
   type: NodePort
-  ports:
-  - port: 8805
-    targetPort: 8805
-    nodePort: 30005
+  nodePort: 30010
   #externalIp:
   #annotations:
