--- a/site1/upf1_2_helm/values_upf1.yaml
+++ b/site1/upf1_2_helm/values_upf1.yaml
@@ -36,3 +36,7 @@ config:
           ue_ip_pool: "172.250.0.0/16" # UE ip pool is used if enable_ue_ip_alloc is set to true
 service:
   type: NodePort
+  ports:
+  - port: 8805
+    targetPort: 8805
+    nodePort: 30005
