--- a/site1/upf1_2_helm/values_upf1.yaml
+++ b/site1/upf1_2_helm/values_upf1.yaml
@@ -1,5 +1,6 @@
 enable: true
-resources: enabled: false
+resources:
+  enabled: false
 images:
   repository: "registry.opennetworking.org/docker.io/"
 config:
@@ -15,11 +16,11 @@ config:
       subnet: "192.168.100.0/24" #this is your gNB network
     access:
       iface: "ens4"
-      ip: "192.168.3.10/24" #New IP address for UPF3 access interface
+      ip: "192.168.3.20/24" #New IP address for UPF3 access interface
       gateway: "192.168.3.1"
     core:
       iface: "ens4"
-      ip: "192.168.4.10/24" #New IP address for UPF3 core interface
+      ip: "192.168.4.20/24" #New IP address for UPF3 core interface
       gateway: "192.168.4.1" 
     cfgFiles:
       upf.json:
@@ -31,12 +32,6 @@ config:
         cpiface:
           dnn: "internet" #keep it matching with Slice dnn
           hostname: "upf"
-          #http_port: "7000"
+          #http_port: "8080"
           enable_ue_ip_alloc: false # if true then it means UPF allocates address from below pool
           ue_ip_pool: "172.250.0.0/16" # UE ip pool is used if enable_ue_ip_alloc is set to true
-service:
-  type: NodePort
-  ports:
-  - port: 8805
-    targetPort: 8805
-    nodePort: 30005
