--- a/site1/upf1_2_helm/values_upf2.yaml
+++ b/site1/upf1_2_helm/values_upf2.yaml
@@ -32,7 +32,7 @@ config:
         cpiface:
           dnn: "internet" #keep it matching with Slice dnn
           hostname: "upf"
-          http_port: "7000"
+          #http_port: "7000"
           enable_ue_ip_alloc: false # if true then it means UPF allocates address from below pool
           ue_ip_pool: "172.250.0.0/16" # UE ip pool is used if enable_ue_ip_alloc is set to true
 service:
