--- a/site2/upf3_helm/values_upf3.yaml
+++ b/site2/upf3_helm/values_upf3.yaml
@@ -1,6 +1,6 @@
 enable: true
 resources:
-  enabled: false
+  enabled: true
 images:
   repository: "registry.opennetworking.org/docker.io/"
 config:
@@ -24,10 +24,11 @@ config:
       gateway: "192.168.6.1" 
     cfgFiles:
       upf.json:
-        mode: af_packet  #this mode means no dpdk
+        mode: af_xdp  #this mode means no dpdk
         hwcksum: true
         log_level: "trace"
-        gtppsc: true #extension header is enabled in 5G. Sending QFI in pdu session extension header
+        gtppsc: false #extension header is enabled in 5G. Sending QFI in pdu session extension header
+        enable_notify_bess: false
         measure_upf: false #enable packet processing time
         cpiface:
           dnn: "internet" #keep it matching with Slice dnn
@@ -35,6 +36,13 @@ config:
           #http_port: "8080"
           enable_ue_ip_alloc: false # if true then it means UPF allocates address from below pool
           ue_ip_pool: "172.250.0.0/16" # UE ip pool is used if enable_ue_ip_alloc is set to true
+        slice_rate_limit_config:
+          # Uplink
+          n6_bps: 1000000000 # 1Gbps
+          n6_burst_bytes: 87500000 # 10ms * 1Gbps
+          # Downlink
+          n3_bps: 1000000000 # 1Gbps
+          n3_burst_bytes: 87500000 # 10ms * 1Gbps
 
 service:
   externalIp: "10.10.1.3" 
