--- a/scenario1/upfs_helm/upf2.yaml
+++ b/scenario1/upfs_helm/upf2.yaml
@@ -26,6 +26,7 @@ config:
         hwcksum: true
         log_level: "trace"
         gtppsc: true #extension header is enabled in 5G. Sending QFI in pdu session extension header
+        measure_upf: false #enable packet processing time
         cpiface:
           dnn: "internet" #keep it matching with Slice dnn
           hostname: "upf"
