--- a/site2/upf3_helm/values_upf3.yaml
+++ b/site2/upf3_helm/values_upf3.yaml
@@ -36,6 +36,21 @@ config:
           #http_port: "8080"
           enable_ue_ip_alloc: false # if true then it means UPF allocates address from below pool
           ue_ip_pool: "172.250.0.0/16" # UE ip pool is used if enable_ue_ip_alloc is set to true
+                  # Default global rate limits. Can be changed at runtime via BESS gRPC.
+          slice_rate_limit_config:
+            # Uplink
+            n6_bps: 1000000000 # 1Gbps
+            n6_burst_bytes: 12500000 # 10ms * 1Gbps
+            # Downlink
+            n3_bps: 1000000000 # 1Gbps
+            n3_burst_bytes: 12500000 # 10ms * 1Gbps
+          qci_qos_config:
+            - qci: 0 # Fallback QCI
+              cbs: 50000
+              ebs: 50000
+              pbs: 50000
+              burst_duration_ms: 10
+              priority: 7
 
 service:
   externalIp: "10.10.1.3" 
