--- a/site2/upf3_helm/values_upf3.yaml
+++ b/site2/upf3_helm/values_upf3.yaml
@@ -1,6 +1,6 @@
 enable: true
 resources:
-  enabled: false
+  enabled: true
 images:
   repository: "registry.opennetworking.org/docker.io/"
 config:
