--- a/site2/upf3_helm/values_upf3.yaml
+++ b/site2/upf3_helm/values_upf3.yaml
@@ -1,6 +1,13 @@
 enable: true
 resources:
   enabled: true
+  bess:
+    requests:
+      cpu: 1
+      memory: 1Gi
+    limits:
+      cpu: 1
+      memory: 1Gi
 images:
   repository: "registry.opennetworking.org/docker.io/"
 config:
