--- a/site2/upf3_helm/values_upf3.yaml
+++ b/site2/upf3_helm/values_upf3.yaml
@@ -44,6 +44,13 @@ config:
           enable_ue_ip_alloc: false # if true then it means UPF allocates address from below pool
           ue_ip_pool: "172.250.0.0/16" # UE ip pool is used if enable_ue_ip_alloc is set to true
                   # Default global rate limits. Can be changed at runtime via BESS gRPC.
+        slice_rate_limit_config:
+            # Uplink
+            n6_bps: 2000000000 # 2Gbps
+            n6_burst_bytes: 12500000 # 10ms * 1Gbps
+            # Downlink
+            n3_bps: 2000000000 # 2Gbps
+            n3_burst_bytes: 12500000 # 10ms * 1Gbps
 
 service:
   externalIp: "10.10.1.3" 
