changed upf3 deployment

--- a/site2/upf3_helm/values_upf3.yaml
+++ b/site2/upf3_helm/values_upf3.yaml
@@ -1,14 +1,12 @@
 resources:
   enabled: false
-  bess:
-    requests:
-      cpu: 1
-      memory: 1Gi
-    limits:
-      cpu: 1
-      memory: 1Gi
 images:
   repository: "registry.opennetworking.org/docker.io/"
+nodeSelectors:
+  enabled: true
+  upf:
+    label: site2upf
+    value: upf3
 config:
   upf:
     name: "oaisim"
