--- a/site2/upf3_helm/values_upf3.yaml
+++ b/site2/upf3_helm/values_upf3.yaml
@@ -9,7 +9,7 @@ config:
       enabled: false #default sriov is disabled in AIAB setup
     hugepage:
       enabled: false #should be enabled if dpdk is enabled
-    cniPlugin: macvlan
+    cniPlugin: ipvlan
     ipam: static
     enb:
       subnet: "10.10.110.0/24" #this is your gNB network
