--- a/site2/upf3_helm/values_upf3.yaml
+++ b/site2/upf3_helm/values_upf3.yaml
@@ -36,11 +36,11 @@ config:
                   # Default global rate limits. Can be changed at runtime via BESS gRPC.
         slice_rate_limit_config:
             # Uplink
-            n6_bps: 100000000 # 100MBps
-            n6_burst_bytes: 125000 # 10ms * 1Gbps
+            n6_bps: 2000000000 # 100MBps
+            n6_burst_bytes: 12500000 # 10ms * 1Gbps
             # Downlink
-            n3_bps: 100000000 # 100Mbbps
-            n3_burst_bytes: 125000 # 10ms * 1Gbps
+            n3_bps: 2000000000 # 100Mbbps
+            n3_burst_bytes: 12500000 # 10ms * 1Gbps
 
 service:
   externalIp: "10.10.1.3" 
