--- a/site1/upf1_2_helm/values_upf2.yaml
+++ b/site1/upf1_2_helm/values_upf2.yaml
@@ -6,9 +6,6 @@ images:
 config:
   upf:
     name: "oaisim"
-    # UPF-HTTP Port
-    prometheus:
-      nodePort: 30020
     sriov:
       enabled: false #default sriov is disabled in AIAB setup
     hugepage:
@@ -40,5 +37,4 @@ config:
           ue_ip_pool: "172.250.0.0/16" # UE ip pool is used if enable_ue_ip_alloc is set to true
 
 service:
-  type: NodePort
-  nodePort: 30002
+  externalIp: "192.168.200.2"
