--- a/site1/upf1_2_helm/values_upf2.yaml
+++ b/site1/upf1_2_helm/values_upf2.yaml
@@ -21,20 +21,27 @@ config:
     core:
       iface: "ens4"
       ip: "192.168.4.20/24" #New IP address for UPF3 core interface
-      gateway: "192.168.4.1" 
+      gateway: "192.168.4.1"
     cfgFiles:
       upf.json:
         mode: af_packet  #this mode means no dpdk
         hwcksum: true
-        log_level: "trace"
+        measure_upf: false
         gtppsc: true #extension header is enabled in 5G. Sending QFI in pdu session extension header
-        measure_upf: false #enable packet processing time
         cpiface:
           dnn: "internet" #keep it matching with Slice dnn
           hostname: "upf"
-          #http_port: "7000"
+          #http_port: "8080"
           enable_ue_ip_alloc: false # if true then it means UPF allocates address from below pool
           ue_ip_pool: "172.250.0.0/16" # UE ip pool is used if enable_ue_ip_alloc is set to true
+        # Default global rate limits. Can be changed at runtime via BESS gRPC.
+        slice_rate_limit_config:
+            # Uplink
+            n6_bps: 2000000000 # 2GBps
+            n6_burst_bytes: 12500000 # 10ms * 1Gbps
+            # Downlink
+            n3_bps: 2000000000 # 2Gbbps
+            n3_burst_bytes: 12500000 # 10ms * 1Gbps
 
 service:
   externalIp: "192.168.200.2"
