--- a/site1/upf1_2_helm/values_upf1.yaml
+++ b/site1/upf1_2_helm/values_upf1.yaml
@@ -1,4 +1,3 @@
-enable: true
 resources:
   enabled: false
 images:
@@ -13,7 +12,7 @@ config:
     cniPlugin: macvlan
     ipam: static
     enb:
-      subnet: "192.168.100.0/24" #this is your gNB network
+      subnet: "10.10.100.0/24" #this is your gNB network
     access:
       iface: "ens4"
       ip: "192.168.3.10/24" #New IP address for UPF3 access interface
@@ -37,10 +36,10 @@ config:
         # Default global rate limits. Can be changed at runtime via BESS gRPC.
         slice_rate_limit_config:
             # Uplink
-            n6_bps: 2000000000 # 100MBps
+            n6_bps: 2000000000 # 2GBps
             n6_burst_bytes: 12500000 # 10ms * 1Gbps
             # Downlink
-            n3_bps: 2000000000 # 100Mbbps
+            n3_bps: 2000000000 # 2Gbbps
             n3_burst_bytes: 12500000 # 10ms * 1Gbps
 
 service:
