--- a/site1/upf1_2_helm/values_upf1.yaml
+++ b/site1/upf1_2_helm/values_upf1.yaml
@@ -15,11 +15,11 @@ config:
       #subnet: "192.168.94.0/24" #this is your gNB network
       subnet: "10.10.100.0/24" #this is your gNB network
     access:
-      iface: "ens4"
+      iface: "enp1s0f0"
       ip: "192.168.3.10/24" #New IP address for UPF3 access interface
       gateway: "192.168.3.1"
     core:
-      iface: "ens4"
+      iface: "enp1s0f0"
       ip: "192.168.4.10/24" #New IP address for UPF3 core interface
       gateway: "192.168.4.1" 
     cfgFiles:
@@ -44,4 +44,4 @@ config:
             n3_burst_bytes: 12500000 # 10ms * 1Gbps
 
 service:
-  externalIp: "10.10.1.2"
+  externalIp: "192.168.94.18"
