--- a/site2/upf3_helm/values_upf3.yaml
+++ b/site2/upf3_helm/values_upf3.yaml
@@ -12,13 +12,14 @@ config:
     cniPlugin: macvlan
     ipam: static
     enb:
-      subnet: "10.10.110.0/24" #this is your gNB network
+      #subnet: "10.10.110.0/24" #this is your gNB network
+      subnet: "10.255.32.179/32" #this is your gNB network
     access:
-      iface: "ens4"
+      iface: "ens3"
       ip: "192.168.5.10/24" #New IP address for UPF3 access interface
       gateway: "192.168.5.1"
     core:
-      iface: "ens4"
+      iface: "ens3"
       ip: "192.168.6.10/24" #New IP address for UPF3 core interface
       gateway: "192.168.6.1" 
     cfgFiles:
