--- a/site2/upf3_helm/values_upf3.yaml
+++ b/site2/upf3_helm/values_upf3.yaml
@@ -43,5 +43,5 @@ config:
             n3_bps: 2000000000 # 2Gbbps
             n3_burst_bytes: 12500000 # 10ms * 1Gbps
 
-service:
-  externalIp: "10.10.1.3" 
+#service:
+#  externalIp: "10.10.1.3" 
