--- a/site1/upf1_helm/values_upf1.yaml
+++ b/site1/upf1_helm/values_upf1.yaml
@@ -47,5 +47,5 @@ config:
             n3_bps: 2000000000 # 2Gbbps
             n3_burst_bytes: 12500000 # 10ms * 1Gbps
 
-service:
-  externalIp: "192.168.94.14"
+#service:
+#  externalIp: "192.168.94.14"
