--- a/site1/upf/values_upf1.yaml
+++ b/site1/upf/values_upf1.yaml
@@ -12,15 +12,15 @@ config:
     cniPlugin: macvlan
     ipam: static
     enb:
-      subnet: "10.255.32.179/32" #this is your gNB network
+      subnet: "192.168.10.0/24" #this is your gNB network
     access:
-      iface: "ens4"
-      ip: "192.168.5.10/24" #New IP address for UPF3 access interface
-      gateway: "192.168.5.1"
+      iface: "enp1s0f1"
+      ip: "192.168.3.10/24" #New IP address for UPF3 access interface
+      gateway: "192.168.3.1"
     core:
-      iface: "ens4"
-      ip: "192.168.6.10/24" #New IP address for UPF3 core interface
-      gateway: "192.168.6.1"
+      iface: "enp1s0f1"
+      ip: "192.168.4.10/24" #New IP address for UPF3 core interface
+      gateway: "192.168.4.1" 
     cfgFiles:
       upf.json:
         mode: af_packet  #this mode means no dpdk
@@ -41,6 +41,3 @@ config:
             # Downlink
             n3_bps: 2000000000 # 2Gbbps
             n3_burst_bytes: 12500000 # 10ms * 1Gbps
-
-service:
-  externalIp: "10.10.1.3"
