--- a/site2/upf/values_upf3.yaml
+++ b/site2/upf/values_upf3.yaml
@@ -48,3 +48,6 @@ config:
             # Downlink
             n3_bps: 2000000000 # 2Gbbps
             n3_burst_bytes: 12500000 # 10ms * 1Gbps
+            
+servicemonitor:
+  enabled: true
