--- a/site3/upf/values_upf4.yaml
+++ b/site3/upf/values_upf4.yaml
@@ -1,3 +1,8 @@
+nodeSelectors:
+  enabled: true
+  upf:
+    label: site
+    value: site3
 resources:
   enabled: false
 images:
@@ -41,3 +46,6 @@ config:
             # Downlink
             n3_bps: 2000000000 # 2Gbbps
             n3_burst_bytes: 12500000 # 10ms * 1Gbps
+            
+servicemonitor:
+  enabled: true
