--- a/site3/upf/values_upf4.yaml
+++ b/site3/upf/values_upf4.yaml
@@ -7,6 +7,8 @@ resources:
   enabled: false
 images:
   repository: "registry.opennetworking.org/docker.io/"
+  tags:
+    tools: busybox:stable
 config:
   upf:
     name: "oaisim"
