--- a/site2/upf/values_upf3.yaml
+++ b/site2/upf/values_upf3.yaml
@@ -31,8 +31,9 @@ config:
     cfgFiles:
       upf.json:
         mode: af_packet  #this mode means no dpdk
-        hwcksum: true
-        measure_upf: false
+        hwcksum: true       
+        measure_upf: true
+        measure_flow: true
         gtppsc: true #extension header is enabled in 5G. Sending QFI in pdu session extension header
         cpiface:
           dnn: "internet" #keep it matching with Slice dnn
