--- a/aether_central/sd-core1.3/sd-core-5g-values.yaml
+++ b/aether_central/sd-core1.3/sd-core-5g-values.yaml
@@ -160,9 +160,11 @@ omec-sub-provision:
 
 omec-user-plane:
   enable: true
-  upf:
-    label: site
-    value: site2
+  nodeSelectors:
+    enabled: true
+    upf:
+      label: site
+      value: site2
   resources:
     enabled: false
   images:
