--- a/site2/upf/values_upf3.yaml
+++ b/site2/upf/values_upf3.yaml
@@ -49,6 +49,8 @@ config:
             # Downlink
             n3_bps: 2000000000 # 2Gbbps
             n3_burst_bytes: 12500000 # 10ms * 1Gbps
-            
+service:
+  type: NodePort
+  
 servicemonitor:
   enabled: true
