--- a/site1/upf/values_upf1.yaml
+++ b/site1/upf/values_upf1.yaml
@@ -19,19 +19,19 @@ config:
     cniPlugin: macvlan
     ipam: static
     enb:
-      subnet: "192.168.10.0/24" #this is your gNB network
+      subnet: "10.10.110.0/24" #this is your gNB network
     access:
-      iface: "enp1s0f1"
-      ip: "192.168.3.10/24" #New IP address for UPF3 access interface
-      gateway: "192.168.3.1"
+      iface: "ens4"
+      ip: "192.168.5.10/24" #New IP address for UPF3 access interface
+      gateway: "192.168.5.1"
     core:
-      iface: "enp1s0f1"
-      ip: "192.168.4.10/24" #New IP address for UPF3 core interface
-      gateway: "192.168.4.1" 
+      iface: "ens4"
+      ip: "192.168.6.10/24" #New IP address for UPF3 core interface
+      gateway: "192.168.6.1" 
     cfgFiles:
       upf.json:
         mode: af_packet  #this mode means no dpdk
-        hwcksum: true
+        hwcksum: true       
         measure_upf: true
         measure_flow: true
         gtppsc: true #extension header is enabled in 5G. Sending QFI in pdu session extension header
@@ -49,6 +49,6 @@ config:
             # Downlink
             n3_bps: 2000000000 # 2Gbbps
             n3_burst_bytes: 12500000 # 10ms * 1Gbps
-
+            
 servicemonitor:
   enabled: true
