--- a/site1/upf/values_upf3.yaml
+++ b/site1/upf/values_upf3.yaml
@@ -9,6 +9,8 @@ images:
   repository: "registry.opennetworking.org/docker.io/"
   tags:
     tools: busybox:stable
+    bess: "omecproject/upf-epc-bess:master-latest"
+    pfcpiface: "omecproject/upf-epc-pfcpiface:master-latest"
 config:
   upf:
     name: "oaisim"
