--- a/aether_central/sd-core1.3/Chart.yaml
+++ b/aether_central/sd-core1.3/Chart.yaml
@@ -1,48 +1,24 @@
 ---
+# SPDX-FileCopyrightText: 2022-present Intel Corporation
 # Copyright 2020-present Open Networking Foundation
+
 #
 # SPDX-License-Identifier: Apache-2.0
-#
-
 
 apiVersion: v2
-name: sd-core
-description: SD-Core control plane services
+description: SD-Core 5G control plane services
+name: 5g-control-plane
 icon: https://guide.opencord.org/logos/cord.svg
-type: application
-version: 0.13.2
-home: https://opennetworking.org/sd-core/
-maintainers:
-  - name: SD-Core Support
-    email: support@opennetworking.org
+
+version: 1.0.0
 
 dependencies:
-  - name: omec-control-plane
-    version: 0.13.0
-    repository: https://charts.aetherproject.org
-    #repository: "file://../omec-control-plane"
-    condition: omec-control-plane.enable4G
+  - name: mongodb
+    version: 13.6.4
+    repository: https://charts.bitnami.com/bitnami
+    condition: mongodb.deploy
+  - name: kafka
+    version: 20.0.4
+    repository: https://charts.bitnami.com/bitnami
+    condition: kafka.deploy
 
-  - name: omec-sub-provision
-    version: 0.7.0
-    repository: https://charts.aetherproject.org
-    #repository: "file://../omec-sub-provision"
-    condition: omec-sub-provision.enable
-
-  - name: 5g-control-plane
-    version: 0.9.2
-    repository: https://charts.aetherproject.org
-    #repository: "file://../5g-control-plane"
-    condition: 5g-control-plane.enable5G
-
-  - name: bess-upf
-    version: 0.1.0
-    repository: https://charts.aetherproject.org
-    alias: omec-user-plane
-    condition: omec-user-plane.enable
-
-  - name: 5g-ran-sim
-    version: 0.7.0
-    repository: https://charts.aetherproject.org
-    #repository: "file://../5g-ran-sim"
-    condition: 5g-ran-sim.enable
