--- a/aether_central/sd-core1.3/5g-control-plane/templates/service-metricfunc.yaml
+++ b/aether_central/sd-core1.3/5g-control-plane/templates/service-metricfunc.yaml
@@ -23,6 +23,9 @@ spec:
 {{- if eq .Values.config.metricfunc.serviceType "NodePort" }}
 {{- if .Values.config.metricfunc.prometheus.nodePort }}
     nodePort: {{ .Values.config.metricfunc.prometheus.nodePort }}
+  ports:
+  - name: apiEndpoint
+    port: {{ .Values.config.metricfunc.apiEndpoint.port }}
 {{- end }}
 {{- end }}
 {{- end }}
