service names are snake_case

--- a/aether_central/sd-core1.3/5g-control-plane/templates/service-metricfunc.yaml
+++ b/aether_central/sd-core1.3/5g-control-plane/templates/service-metricfunc.yaml
@@ -25,7 +25,7 @@ spec:
     nodePort: {{ .Values.config.metricfunc.prometheus.nodePort }}
 {{- end }}
 {{- end }}
-  - name: apiEndpoint
+  - name: api-endpoint
     port: {{ .Values.config.metricfunc.apiEndpoint.port }}
     protocol: TCP
 {{- end }}
