changed to sd-core chart

--- a/aether_central/sd-core1.3/5g-control-plane/values.yaml
+++ b/aether_central/sd-core1.3/5g-control-plane/values.yaml
@@ -110,7 +110,7 @@ resources:
       memory: 1Gi
 
 kafka:
-  deploy: false
+  deploy: true
   fullnameOverride: kafka
   zookeeper:
     persistence:
