--- a/site1/upf/templates/statefulset-upf.yaml
+++ b/site1/upf/templates/statefulset-upf.yaml
@@ -4,7 +4,7 @@
 # SPDX-License-Identifier: Apache-2.0
 */}}
 
-{{- $upfConfig := index .Values.config.upf.cfgFiles "upf.json" }}
+{{- $upfConfig := index .Values.config.upf.cfgFiles "upf.jsonc" }}
 {{- $accessConfig := index $upfConfig "access" }}
 {{- $coreConfig := index $upfConfig "core" }}
 ---
@@ -55,8 +55,8 @@ spec:
     {{- end }}
       initContainers:
       - name: bess-init
-        image: {{ .Values.images.tags.bess | quote }}
-        imagePullPolicy: {{ .Values.images.pullPolicy | quote }}
+        image: {{ .Values.images.repository }}{{ .Values.images.tags.bess }}
+        imagePullPolicy: {{ .Values.images.pullPolicy }}
         command: ["sh", "-xec"]
         args:
         - ip route replace {{ .Values.config.upf.enb.subnet }} via {{ .Values.config.upf.access.gateway }};
@@ -81,8 +81,8 @@ spec:
     {{- end }}
       containers:
       - name: bessd
-        image: {{ .Values.images.tags.bess | quote }}
-        imagePullPolicy: {{ .Values.images.pullPolicy | quote }}
+        image: {{ .Values.images.repository }}{{ .Values.images.tags.bess }}
+        imagePullPolicy: {{ .Values.images.pullPolicy }}
         securityContext:
         {{- if .Values.config.upf.privileged }}
           privileged: true
@@ -96,9 +96,9 @@ spec:
         command: ["/bin/bash", "-xc"]
         args:
         {{- if .Values.config.upf.hugepage.enabled }}
-          - bessd -f -grpc-url=0.0.0.0:10514
+          - bessd -f --allow="$PCIDEVICE_INTEL_COM_INTEL_SRIOV_DPDK" --grpc_url=0.0.0.0:10514
         {{- else }}
-          - bessd -m 0 -f -grpc-url=0.0.0.0:10514
+          - bessd -m 0 -f --allow="$PCIDEVICE_INTEL_COM_INTEL_SRIOV_DPDK" --grpc_url=0.0.0.0:10514
         {{- end }}
         lifecycle:
           postStart:
@@ -142,7 +142,7 @@ spec:
           {{- end }}
         env:
           - name: CONF_FILE
-            value: /etc/bess/conf/upf.json
+            value: /etc/bess/conf/upf.jsonc
         volumeMounts:
           - name: shared-app
             mountPath: /pod-share
@@ -157,8 +157,8 @@ spec:
             mountPath: /tmp/coredump
         {{- end }}
       - name: routectl
-        image: {{ .Values.images.tags.bess | quote }}
-        imagePullPolicy: {{ .Values.images.pullPolicy | quote }}
+        image: {{ .Values.images.repository }}{{ .Values.images.tags.bess }}
+        imagePullPolicy: {{ .Values.images.pullPolicy }}
         env:
           - name: PYTHONUNBUFFERED
             value: "1"
@@ -172,20 +172,20 @@ spec:
 {{ toYaml .Values.resources.routectl | indent 10 }}
       {{- end }}
       - name: web
-        image: {{ .Values.images.tags.bess | quote }}
-        imagePullPolicy: {{ .Values.images.pullPolicy | quote }}
+        image: {{ .Values.images.repository }}{{ .Values.images.tags.bess }}
+        imagePullPolicy: {{ .Values.images.pullPolicy }}
         command: ["/bin/bash", "-xc", "bessctl http 0.0.0.0 8000"]
       {{- if .Values.resources.enabled }}
         resources:
 {{ toYaml .Values.resources.web | indent 10 }}
       {{- end }}
       - name: pfcp-agent
-        image: {{ .Values.images.tags.pfcpiface | quote }}
-        imagePullPolicy: {{ .Values.images.pullPolicy | quote }}
+        image: {{ .Values.images.repository }}{{ .Values.images.tags.pfcpiface }}
+        imagePullPolicy: {{ .Values.images.pullPolicy }}
         command: ["pfcpiface"]
         args:
           - -config
-          - /tmp/conf/upf.json
+          - /tmp/conf/upf.jsonc
       {{- if .Values.resources.enabled }}
         resources:
 {{ toYaml .Values.resources.cpiface | indent 10 }}
@@ -197,8 +197,8 @@ spec:
             mountPath: /tmp/conf
     {{- if .Values.config.gratuitousArp.enabled }}
       - name: arping
-        image: {{ .Values.images.tags.tools | quote }}
-        imagePullPolicy: {{ .Values.images.pullPolicy | quote }}
+        image: {{ .Values.images.repository }}{{ .Values.images.tags.tools }}
+        imagePullPolicy: {{ .Values.images.pullPolicy }}
         command: ["sh", "-xc"]
         args:
           - |
