added kafka deployment

--- a/aether_central/sd-core1.4/sd-core-5g-values.yaml
+++ b/aether_central/sd-core1.4/sd-core-5g-values.yaml
@@ -16,6 +16,11 @@ omec-control-plane:
     # refer above helm chart to add other NF images
   kafka:
     deploy: true
+    persistence:
+      enabled: false
+    zookeeper:
+      persistence:
+        enabled: false
   mongodb:
     usePassword: false
     persistence:
