forgot to set to true

--- a/aether_central/sd-core1.4/sd-core-5g-values.yaml
+++ b/aether_central/sd-core1.4/sd-core-5g-values.yaml
@@ -17,10 +17,10 @@ omec-control-plane:
   kafka:
     deploy: true
     persistence:
-      enabled: false
+      enabled: true
     zookeeper:
       persistence:
-        enabled: false
+        enabled: true
   mongodb:
     usePassword: false
     persistence:
